Wood-стратегия: под башню или новую башню при угрозе; страница вставки с выбором лиги
- WoodStrategy.Retreat: при чужих рыцарях ближе DangerRadius (500) — BUILD на ближайшую свою
  башню (подход и прокачка), без башни — новая башня на ближайшем пустом сайте не ближе к рыцарям,
  бег к дому только в Wood 3. Ключ reach=N (TowerReach, 700).
  Против боссов по 10 партий: Wood3 10:0, Wood2 8:2, Wood1 10:0, Bronze 10:0 (было 4:2 и 4:2).
- tools/check_bundle.sh — склейка + сборка dist/codingame.cs как единственного файла проекта.
- tools/paste_page.py — выбор лиги на странице, подставляет DefaultLeague в код при копировании.
- CLAUDE.md: структура, команды, окружение песочницы (dotnet из apt, --add-opens для SDK), статус этапа 1.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X3QKXKH7DsAzNp7pTxy9g3